New graphics event handling
git-svn-id: https://svn.r-project.org/R/trunk@52081 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -102,6 +102,11 @@ NEW FEATURES
     o	The startup message now includes the platform and if used,
 	sub-architecture: this is useful where different
 	(sub-)architectures run on the same OS.
+	
+    o	The getGraphicsEvent() mechanism now allows multiple windows
+	to return graphics events, through the new functions
+	setGraphicsEventHandlers(), setGraphicsEventEnv(), and
+	getGraphicsEventEnv().
 
     o	tools::texi2dvi() gains an 'index' argument, mainly for use by
 	R CMD Rd2pdf.
