format() does not do what Rd2txt thought it did
git-svn-id: https://svn.r-project.org/R/trunk@52083 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -336,6 +336,10 @@ BUG FIXES
     o	tools::Rd2txt() did not render poorly written Rd files
 	consistently with other renderers.
 
+	It computed widths of strings that would be print()ed with
+	escapes incorrectly, for example in the computation of column
+	width for \tabular.
+
     o	na.action() did not extract the 'na.action' component as
 	documented.
 
