enhance Sys.chmod
git-svn-id: https://svn.r-project.org/R/trunk@52094 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -120,6 +120,8 @@ NEW FEATURES
     o	points() and lines() gain "table" methods to match plot().
 	(Wish of PR#10472.)
 
+    o	Sys.chmod() allows 'mode' to be a vector, recycled along 'paths'.
+
 
 DEPRECATED & DEFUNCT
 
