bitwise logic ops for oct/hexmode
git-svn-id: https://svn.r-project.org/R/trunk@52096 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -122,6 +122,9 @@ NEW FEATURES
 
     o	Sys.chmod() allows 'mode' to be a vector, recycled along 'paths'.
 
+    o	There are |, & and xor() methods for classes "octmode" and
+	"hexmode", which work bitwise.
+
 
 DEPRECATED & DEFUNCT
 
