--- a/share/texmf/Rd.sty
+++ b/share/texmf/Rd.sty
@@ -335,10 +335,10 @@
 \ifthenelse{\boolean{Rd@use@hyper}}
 {\newcommand{\aliasA}[3]{\hypertarget{Rfn.#3}{\index{#1@\texttt{#1} \textit{(\texttt{#2})}}}}}
 {\newcommand{\aliasA}[3]{\index{#1@\texttt{#1} \textit{(\texttt{#2})}}}}
-% \aliasB has no hyper-indexing.
+% \aliasB has no indexing.
 \ifthenelse{\boolean{Rd@use@hyper}}
 {\newcommand{\aliasB}[3]{\hypertarget{Rfn.#3}{\relax}}}
-{\newcommand{\aliasB}[3]{\index{#1@\texttt{#1} \textit{(\texttt{#2})}}}}
+{\newcommand{\aliasB}[3]{}}
 \ifthenelse{\boolean{Rd@use@hyper}}
 {\newcommand{\methaliasA}[3]{\hypertarget{Rfn.#3}{\relax}}}
 {\newcommand{\methaliasA}[3]{}}
