--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -541,8 +541,7 @@ interesting object in the package, giving its name and a description
 be included).  Normally this file is missing, and the corresponding
 information is automatically generated from the documentation sources
 (using @code{Rdindex()} from package @pkg{tools}) when installing from
-source and when using the package builder (@pxref{Checking and building
-packages}).
+source.
 
 Rather than editing this file, it is preferable to put customized
 information about the package into an overview man page
