add R CMD nbuild, for now
git-svn-id: https://svn.r-project.org/R/trunk@52137 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -173,6 +173,9 @@ UTILITIES
     o	R CMD Rd2dvi makes use of tools::texi2dvi to process the
 	package manual.
 
+    o	There is an R-based version of R CMD build, R CMD nbuild, that
+	is intended to replace it before release.
+
 
 C-LEVEL FACILITIES
 
