change what R CMD build does about INDEX files tweak log facility for use by R CMD check remove unused variable in R CMD check
git-svn-id: https://svn.r-project.org/R/trunk@52156 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -176,6 +176,10 @@ UTILITIES
     o	There is an R-based version of R CMD build.  The Perl-based
 	version is, for now, still available as R CMD obuild.
 
+	R CMD build no longer creates an INDEX file (R CMD INSTALL
+	does so), and --force removes (rather than overwrites) an
+	existing INDEX file.
+
 
 C-LEVEL FACILITIES
 
