port some documentation tweaks from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52161 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -13,6 +13,20 @@
 	**************************************************
 
 
+    		CHANGES IN R VERSION 2.11.1 patched
+	
+
+BUG FIXES
+
+    o	file.rename() now waits for the rename to complete before 
+    	returning, so that operations on the new filename will not fail.
+
+    o	Sys.info() and win.version() now report Windows 7 as such (and
+	not as Vista), and Sys.info() now reports the machine type as
+	'x86-64' on 64-bit platforms.
+
+
+
     		CHANGES IN R VERSION 2.11.1
 
 
