update docs for R-2-11-branch ports
git-svn-id: https://svn.r-project.org/R/trunk@52162 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -85,12 +85,6 @@ PACKAGE INSTALLATION
     o	Package installation, including 'configure.win' scripts, can
 	use ${R_HOME}/bin${R_ARCH_BIN} as a portable way to find
 	the binaries such as Rscript.exe.
-	
-
-BUG FIXES
-
-    o	file.rename() now waits for the rename to complete before 
-    	returning, so that operations on the new filename will not fail.
 
 
 
@@ -101,6 +95,20 @@ BUG FIXES
 	*	       2.11 SERIES NEWS			 *
 	*						 *
 	**************************************************
+
+
+    		CHANGES IN R VERSION 2.11.1 patched
+	
+
+BUG FIXES
+
+    o	file.rename() now waits for the rename to complete before 
+    	returning, so that operations on the new filename will not fail.
+
+    o	Sys.info() and win.version() now report Windows 7 as such (and
+	not as Vista), and Sys.info() now reports the machine type as
+	'x86-64' on 64-bit platforms.
+
 
 
     		CHANGES IN R VERSION 2.11.1
