--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3996,9 +3996,9 @@ LIBS=-L/usr/X11/lib
 been some success with @command{gcc}@tie{}4/@command{gfortran}, mainly
 on Sparc.  Sun packages for @R{} used to be available from
 @uref{http://www.sunfreeware.com/} for both architectures, but have not
-been updated recently.  (Recent Sun machines are Opterons
-(@cputype{amd64}) rather than @cputype{x86}, but 32-bit @cputype{x86}
-executables are the default.)
+been updated recently.  (Recent Sun machines are AMD Opterons or Intel
+Xeons (@cputype{amd64}) rather than @cputype{x86}, but 32-bit
+@cputype{x86} executables are the default.)
 
 There are also reports of success on OpenSolaris (also known as Solaris
 Express Community Edition, and sometimes as Solaris 11) on
@@ -4017,7 +4017,7 @@ It is necessary to avoid the tools in @file{/usr/ucb}: in particular
 @file{/usr/xpg4/bin}.
 
 Modern Solaris systems allow a large selection of Open Source software
-to be installed from @url{http://www.opencsw.org} (formerly
+to be installed from @url{http://www.opencsw.org} (and also
 @url{http://www.blastwave.org}) via @command{pkg-get}, by default
 installed under @file{/opt/csw}.  You will need @acronym{GNU}
 @code{libiconv} and @code{readline}: the Solaris version of @code{iconv}
